=== (in git)
* Enhancements:
  * Update mingw64-32-4.7.1 support (mingwbuilds 4.7.1 rev1)

=== 2012-06-29

* Enhancements:
  * Upgraded Ruby 1.8.7 to patchlevel 370
  * Add support for Japanese language installers.
  * Enhance Inno scripts to enable multi-language installers.
  * Upgraded documentation generator dependency (rdoc_chm) to 3.1.0. Closes #63
  * Add mingw64-32-4.7.1 support (mingwbuilds 4.7.1 release)
  * Correct mingw64 4.6.3 to latest stable release
  * Upgraded RubyGems to 1.8.24 on all versions of Ruby
  * Upgraded OpenSSL to version 1.0.0j
  * Upgraded libffi to version 3.0.11
  * Upgraded ZLib to version 1.2.7
  * Upgraded Iconv to version 1.14
  * Disable extra debug information from Ruby 1.9 builds (debugflags)

=== 2012-04-21

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 194
  * Upgraded DevKit gdb to version 7.4 (no Python support)
  * Upgraded RubyGems to 1.8.23 on all versions of Ruby
  * Increased file descriptions for 1.9.x to 32K. Closes #104
  * Upgraded OpenSSL to version 1.0.0h

* Cleanup:
  * Removed support for non-functioning DevKit flavors

=== 2012-02-16

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 125
  * Upgraded Ruby 1.8.7 to patchlevel 358
  * Upgraded DevKit autoconf (and wrapper) to version 2.68
  * Upgraded DevKit mintty to version 1.0.3
  * Add mingw-32-4.6.2 toolchain support
  * Upgraded OpenSSL to version 1.0.0g
  * Upgraded DevKit MSYS libiconv (1.14-1) and libintl (0.18.1.1-1)
  * Upgraded RubyGems to 1.8.16 on all versions of Ruby
  * Upgraded DevKit binutils to version 2.22
  * Upgraded DevKit gdb (and deps) to version 7.3.1
  * Removed mingw-32-4.6.1 toolchain support
  * Removed DevKit autoconf 2.13
  * Add DevKit MSYS Korn Shell (mksh) implementation

=== 2011-12-28

* Enhancements:
  * Upgraded Ruby 1.8.7 to patchlevel 357
  * Add mingw64-32-4.6.3 toolchain support (ruben's 4.6.3-1 build)
  * Upgraded rb-readline to version 0.4.2
  * Upgraded Tcl/Tk to version 8.5.11